// Copyright Istio Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// THIS FILE IS AUTOMATICALLY GENERATED BY MIXGEN.

syntax = "proto3";



package istio.mixer.adapter.sample.quota;


import "gogoproto/gogo.proto";
import "mixer/adapter/model/v1beta1/extensions.proto";
import "google/protobuf/any.proto";
import "mixer/adapter/model/v1beta1/quota.proto";
import "policy/v1beta1/value_type.proto";
import "policy/v1beta1/type.proto";

option (istio.mixer.adapter.model.v1beta1.template_variety) = TEMPLATE_VARIETY_QUOTA;
option (istio.mixer.adapter.model.v1beta1.template_name) = "quota";

option (gogoproto.goproto_getters_all) = false;
option (gogoproto.equal_all) = false;
option (gogoproto.gostring_all) = false;
option (gogoproto.stable_marshaler_all) = true;

// HandleQuotaService is implemented by backends that wants to handle request-time 'quota' instances.
service HandleQuotaService {
    // HandleQuota is called by Mixer at request-time to deliver 'quota' instances to the backend.
    rpc HandleQuota(HandleQuotaRequest) returns (istio.mixer.adapter.model.v1beta1.QuotaResult);
    
}

// Request message for HandleQuota method.
message HandleQuotaRequest {

    // 'quota' instance.
    InstanceMsg instance = 1;

    // Adapter specific handler configuration.
    //
    // Note: Backends can also implement [InfrastructureBackend][https://istio.io/docs/reference/config/mixer/istio.mixer.adapter.model.v1beta1.html#InfrastructureBackend]
    // service and therefore opt to receive handler configuration during session creation through [InfrastructureBackend.CreateSession][TODO: Link to this fragment]
    // call. In that case, adapter_config will have type_url as 'google.protobuf.Any.type_url' and would contain string
    // value of session_id (returned from InfrastructureBackend.CreateSession).
    google.protobuf.Any adapter_config = 2;

    // Id to dedupe identical requests from Mixer.
    string dedup_id = 3;

    // Expresses the quota allocation request.
    istio.mixer.adapter.model.v1beta1.QuotaRequest quota_request = 4;
}





// Contains instance payload for 'quota' template. This is passed to infrastructure backends during request-time
// through HandleQuotaService.HandleQuota.
message InstanceMsg {

    // Name of the instance as specified in configuration.
    string name = 72295727;
    
    
    map<string, istio.policy.v1beta1.Value> dimensions = 1;
    
    
    map<string, bool> boolMap = 2;
    
    
    Res1Msg res1 = 11;
    
}


message Res1Msg {
    
    
    istio.policy.v1beta1.Value value = 1;
    
    
    map<string, istio.policy.v1beta1.Value> dimensions = 2;
    
    
    int64 int64Primitive = 3;
    
    
    bool boolPrimitive = 4;
    
    
    double doublePrimitive = 5;
    
    
    string stringPrimitive = 6;
    
    
    map<string, int64> int64Map = 7;
    
    
    istio.policy.v1beta1.TimeStamp timeStamp = 9;
    
    
    istio.policy.v1beta1.Duration duration = 10;
    
    
    Res2Msg res2 = 11;
    
    
    map<string, Res2Msg> res2_map = 12;
    
}


message Res2Msg {
    
    
    istio.policy.v1beta1.Value value = 1;
    
    
    map<string, istio.policy.v1beta1.Value> dimensions = 2;
    
    
    int64 int64Primitive = 3;
    
}

// Contains inferred type information about specific instance of 'quota' template. This is passed to
// infrastructure backends during configuration-time through [InfrastructureBackend.CreateSession][TODO: Link to this fragment].
message Type {
    
    
    map<string, istio.policy.v1beta1.ValueType> dimensions = 1;
    
    
    Res1Type res1 = 11;
    
}


message Res1Type {
    
    
    istio.policy.v1beta1.ValueType value = 1;
    
    
    map<string, istio.policy.v1beta1.ValueType> dimensions = 2;
    
    
    Res2Type res2 = 11;
    
    
    map<string, Res2Type> res2_map = 12;
    
}


message Res2Type {
    
    
    istio.policy.v1beta1.ValueType value = 1;
    
    
    map<string, istio.policy.v1beta1.ValueType> dimensions = 2;
    
}


// Represents instance configuration schema for 'quota' template.
message InstanceParam {
    
    
    map<string, string> dimensions = 1;
    
    
    map<string, string> boolMap = 2;
    
    
    Res1InstanceParam res1 = 11;
    
}


message Res1InstanceParam {
    
    
    string value = 1;
    
    
    map<string, string> dimensions = 2;
    
    
    string int64Primitive = 3;
    
    
    string boolPrimitive = 4;
    
    
    string doublePrimitive = 5;
    
    
    string stringPrimitive = 6;
    
    
    map<string, string> int64Map = 7;
    
    
    string timeStamp = 9;
    
    
    string duration = 10;
    
    
    Res2InstanceParam res2 = 11;
    
    
    map<string, Res2InstanceParam> res2_map = 12;
    
}


message Res2InstanceParam {
    
    
    string value = 1;
    
    
    map<string, string> dimensions = 2;
    
    
    string int64Primitive = 3;
    
}

